--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "habit-tracker",
+  "version": "1.0.0",
+  "description": "Habit Tracker MERN Application",
+  "scripts": {
+    "install-all": "npm install && cd frontend && npm install && cd ../backend && npm install",
+    "build": "cd frontend && npm run build",
+    "start": "cd backend && npm start"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
