--- a/vercel.json
+++ b/vercel.json
@@ -5,21 +5,21 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build"
+        "distDir": "build",
+        "buildCommand": "cd frontend && npm install && npm run build"
       }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/backend/server.js"
+      "handle": "filesystem"
     },
     {
       "src": "/static/(.*)",
       "dest": "/frontend/static/$1"
     },
     {
-      "src": "/(.*)",
+      "src": "/.*",
       "dest": "/frontend/index.html"
     }
   ]
